<resources>
    <string name="app_name">MemoryUp</string>
    <string name="audio">Audio</string>
    <string name="music">Music</string>
    <string name="play">Play</string>
    <string name="app_logo">App Logo</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="signup_failure">Failed to sign in</string>
    <string name="login_failure">Failed to login.</string>
    <string name="username_hint">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="title">%1$s - Level %2$d</string>
    <string name="time">%1$d:%2$s</string>
    <string name="timer_icon_description">timer icon</string>
    <string name="points_icon_description">points icon</string>
    <string name="results_title_victory">Victory!</string>
    <string name="results_title_time_up">Time\'s Up!</string>
    <string name="results_points">%1$d out of %2$d</string>
    <string name="main_menu_icon_description">go to main menu</string>
    <string name="levels_icon_description">go to level selector</string>
    <string name="level_one">level_one</string>
    <string name="level_two">level_two</string>
    <string name="level_three">level_three</string>
    <string name="level_four">level_four</string>
    <string name="user_greeting">Hi, %1$s!</string>
    <string name="change_user_icon_description">change user</string>
    <string name="channel_id">leaderboard_notif</string>
    <string name="channel_name">leaderboard_channel</string>
    <string name="channel_description">Channel for notifications concerning leaderboard position.</string>
</resources>
