<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_matching_background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/musicSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/music"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/audioSwitch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/audioSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/audio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/userGreeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/brain" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_background"
        android:paddingStart="70dp"
        android:paddingTop="15dp"
        android:paddingEnd="70dp"
        android:paddingBottom="30dp"
        app:constraint_referenced_ids="userGreeting, playButton,leaderboardButton"
        app:flow_maxElementsWrap="1"
        app:flow_verticalGap="22dp"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <TextView
        android:id="@+id/userGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/user_greeting_background"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="Hi, liana!"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        tools:layout_editor_absoluteX="190dp"
        tools:layout_editor_absoluteY="314dp" />

    <ImageView
        android:id="@+id/changeUserIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/icon_background"
        android:contentDescription="@string/change_user_icon_description"
        android:onClick="onChangeUser"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/userGreeting"
        app:layout_constraintEnd_toEndOf="@+id/buttons"
        app:layout_constraintStart_toEndOf="@+id/userGreeting"
        app:layout_constraintTop_toTopOf="@+id/userGreeting"
        app:srcCompat="@drawable/change_user" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/playButton"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_background"
        android:onClick="onPlay"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/play"
        android:textAllCaps="false"
        android:textColor="#000000"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/leaderboardButton"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_background"
        android:onClick="onLeaderboard"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/leaderboard"
        android:textAllCaps="false"
        android:textColor="#000000" />

</androidx.constraintlayout.widget.ConstraintLayout>